<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.musicchaser.society.post.SocietyPostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outer_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".society.post.SocietyPostDialog">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_shape_radius_16dp"
            android:backgroundTint="@color/white"
            android:elevation="@dimen/shadow_elevation"
            android:onClick="@{() -> viewModel.nothing()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/society_post_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="@dimen/letter_spacing"
                android:text="@string/society_post"
                android:textSize="@dimen/sub_title_font_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/society_post_save_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_shape_radius_8dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/submission"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/golden_yellow"
                android:elevation="@dimen/shadow_elevation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/society_post_thread_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/society_post_form_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/society_post_thread_name_edit_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/society_post_name"
                    android:fontFamily="@font/noto_sans"
                    android:letterSpacing="@dimen/letter_spacing"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.threadName}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/society_post_thread_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/society_post_thread_name"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/society_post_thread_type_edit_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_shape_radius_16dp"
                    android:hint="@string/society_post_type"
                    android:inputType="none"
                    android:popupBackground="@color/golden_yellow"
                    android:text="@={viewModel.threadType}">
                </AutoCompleteTextView>
<!--                android:dropDownSelector="@drawable/dropdown_menu_society_post_selector"-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/society_post_thread_content"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/society_post_thread_type"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/society_post_thread_content_edit_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/society_post_content"
                    android:fontFamily="@font/noto_sans"
                    android:letterSpacing="@dimen/letter_spacing"
                    android:textColor="@color/black"
                    android:text="@={viewModel.threadContent}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>