<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.musicchaser.profile.basicinfoedit.BasicInfoEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outer_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.basicinfoedit.BasicInfoEditDialog">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_shape_radius_16dp"
            android:backgroundTint="@color/white"
            android:onClick="@{() -> viewModel.nothing()}"
            android:elevation="@dimen/shadow_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/basic_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="@dimen/letter_spacing"
                android:text="@string/profile_basic_info"
                android:textSize="@dimen/sub_title_font_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/basic_info_save_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_shape_radius_8dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/basic_info_save_button"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/golden_yellow"
                android:elevation="@dimen/shadow_elevation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basic_info_content_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/basic_info_title"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/basic_info_edit_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/basic_info_edit_placeholder"
                    android:fontFamily="@font/noto_sans"
                    android:letterSpacing="@dimen/letter_spacing"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.nickname}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>